@@ -7,5 +7,7 @@ KEYTOKEY_AFTER_KEYUP                    --AUTO--
 POINTINGRELATIVETOSCROLL_TOFLAGS        --AUTO--
 POINTINGRELATIVETOSCROLL_TOKEYS         --AUTO--
 DROPSCROLLWHEEL_DROP_HORIZONTAL_SCROLL  --AUTO--
+FLIPPOINTINGRELATIVE_HORIZONTAL         --AUTO--
+FLIPPOINTINGRELATIVE_VERTICAL           --AUTO--
 FLIPSCROLLWHEEL_HORIZONTAL              --AUTO--
 FLIPSCROLLWHEEL_VERTICAL                --AUTO--
