@@ -46,8 +46,9 @@ enum {
   // Version 38: Added BRIDGE_VK_OPEN_URL
   // Version 39: Added Option::POINTINGRELATIVETOSCROLL_TOKEYS
   // Version 40: Added BRIDGE_REMAPTYPE_FLIPSCROLLWHEEL
+  // Version 41: Added BRIDGE_REMAPTYPE_FLIPPOINTINGRELATIVE
 
-  BRIDGE_REMAPCLASS_INITIALIZE_VECTOR_FORMAT_VERSION = 40,
+  BRIDGE_REMAPCLASS_INITIALIZE_VECTOR_FORMAT_VERSION = 41,
 };
 
 enum {
@@ -74,6 +75,7 @@ enum {
   BRIDGE_REMAPTYPE_DROPKEYAFTERREMAP,
   BRIDGE_REMAPTYPE_DROPPOINTINGRELATIVECURSORMOVE,
   BRIDGE_REMAPTYPE_DROPSCROLLWHEEL,
+  BRIDGE_REMAPTYPE_FLIPPOINTINGRELATIVE,
   BRIDGE_REMAPTYPE_FLIPSCROLLWHEEL,
   BRIDGE_REMAPTYPE_FORCENUMLOCKON,
   BRIDGE_REMAPTYPE_HOLDINGKEYTOKEY,
