@@ -3,6 +3,7 @@ Changes since 8.0.0
     - Added "Quit KeyRemap4MacBook" into menu bar.
     - Added KeyCode::VK_OPEN_URL_*.
     - Added Option::POINTINGRELATIVETOSCROLL_TOKEYS.
+    - Added __FlipPointingRelative__.
     - Added __FlipScrollWheel__.
     - Some minor improvements.
 
